# 3d-bpp-cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cubeBpptest
cubeBpp/: CMakeLists.txt  Makefile  cmake_install.cmake
cubeBpp/algorithms/: cubeGenAlgorithm.cc  cubeGenAlgorithm.h
cubeBpp/objects/: objects.cc  objects.h
cythonSource/: bppCpp.cc
test/: bppCube.cc
